# HomePanel-S3

./: .clang-format  .editorconfig  .gitattributes  .gitignore  .markdownlintignore  CHANGELOG.md  CLAUDE.md  CMakeLists.txt  COLOR_CONTROL.md  CONTRIBUTING.md  FAQ.md  GT911_PINS.md  LICENSE  PRODUCTION_READINESS.md  README.md  RELEASE_CHECKLIST.md  RUNBOOK.md  SCENES_AUTOMATIONS.md  SECURITY.md  TROUBLESHOOTING.md  UI_GUIDE.md  UI_REDESIGN_PLAN.md  lv_conf.h  sdkconfig.defaults
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug.yml  docs.yml  feature.yml
.github/workflows/: ci.yml  esp-idf.yml
components/cjson/: CMakeLists.txt  cJSON.c  cJSON.h
components/esp_lcd_touch_gt911/: idf_component.yml
components/lvgl__lvgl/env_support/cmake/: custom.cmake  esp.cmake  micropython.cmake
components/lvgl__lvgl/src/extra/: README.md
main/: CMakeLists.txt  Kconfig.projbuild  idf_component.yml  lcd_rgb_port.c  lcd_rgb_port.h  lvgl_port.c  lvgl_port.h  main.c  ui_categories.json  ui_icons.c  ui_icons.h  ui_icons_font.c  ui_style.c  ui_style.h  waveshare_rgb_lcd_port.c  waveshare_rgb_lcd_port.h
main/include/: battery_monitor.h  command_queue.h  config.h  config_defaults.h  discovery.h  ha_client.h  ha_config.h  http_client.h  offline_tracker.h  scene_service.h  screen_manager.h  tabbed_ui.h  ui_color_panel.h  ui_scene_grid.h  wifi_manager.h
main/src/: battery_monitor.c  command_queue.c  config.c  discovery.c  ha_client.c  http_client.c  offline_tracker.c  scene_service.c  screen_manager.c  tabbed_ui.c  ui_color_panel.c  ui_scene_grid.c  wifi_manager.c
main/test/: CMakeLists.txt  mock_ha_client.c  test_battery_monitor.c  test_config.c  test_ha_client.c  test_ha_payload.c  test_offline_tracker.c  test_scene_service.c  test_wifi_manager.c
scripts/: build.sh  set-env.ps1.template
simulator/: CMakeLists.txt
simulator/include/: esp_heap_caps.h  esp_log.h  lvgl_port.h
simulator/src/: main.c  sim_data.c  sim_data.h  win32_port.c  win32_port.h
simulator/stubs/: home_assistant_stubs.c  lvgl_port_stub.c  simulator_log.c
